# Kindle-Dashboard

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Kindle-Dashboard  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  config.json  config_template.json  dxdcourses2025Spring.ics  fetch_weather.py  main.py
.cache/clangd/index/: main.cpp.2625AC95CA7547A8.idx  stb_image_write.h.A9148C94D848ECFE.idx
.github/workflows/: main.yml
feeders/: clock.py  stock.py  timetable.py  weather.py
include/: renderer.hpp  stb_image_write.h  stb_truetype.h
src/: main.cpp  renderer.cpp
